# indusnlp-v2

./: .env.example  .gitignore  README.md  pyproject.toml  test_cleaning_automated.py  test_ocr.py  test_qna_generation.py
filters/: HindiTextCleaner.py  __init__.py  badwords_en_hi_hiR.py  textcleaner.py
filters/data/: dialects.json  hindi_numbers.json  hindi_punctuations.json  suffixes.json  sundry_stops.json
filters/data/datasets/Dialects_Data/: README.md
filters/data/datasets/Dialects_Data/Awadhi/: README.md
filters/data/datasets/Dialects_Data/Bhojpuri/: README.md
filters/data/datasets/Dialects_Data/Dogri/: README.md
filters/data/datasets/Dialects_Data/Kinnauri/: README.md
filters/data/datasets/Dialects_Data/Magahi/: README.md
filters/data/datasets/Dialects_Data/Maithili/: README.md
filters/data/stopwords/: bb_stopwords.txt  bu_stopwords.txt  ch_stopwords.txt  da_stopwords.txt  hr_stopwords.txt  mhi_stopwords.txt  mi_stopwords.txt  mr_stopwords.txt  su_stopwords.txt
indusnlp/: __init__.py  app.py
indusnlp/pipelines/: __init__.py  cleaning.py  ocr.py  qna.py
